fix contrast mobile issue

--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -35,6 +35,7 @@ section{
         height: 100%;
         .section__title__background{
             font-size: 4rem;
+            color: $secondary;
             position: relative;
             margin-bottom: 80px;
         }
